--- a/Mahamining_e-Auction/AdminMaster.Master
+++ b/Mahamining_e-Auction/AdminMaster.Master
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.css" integrity="sha512-fxF1t7b0mpb/ytjBeSu/OpgXxCVcX5/O8AJGYvHaWmNfi/lYLtttitFK17K4iKBva4iU9dcZ+BIV7dyD/nDdSw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="css/Sidebar.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+
     <title></title>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
@@ -40,19 +42,13 @@
                                 <li class="sidebar-dropdown">
                                     <a href="#" title="Masters">
                                         <i class="fas fa-database"></i>
-                                        <span class="menu-text">Masters</span>
+                                        <span class="menu-text">Participate</span>
                                     </a>
                                     <div class="sidebar-submenu">
                                         <ul>
-                                            <li><a href="#">User Register</a></li>
-                                            <li><a href="#">Lessee/ Licence Register</a></li>
-                                            <li><a href="#">Quarry Register</a></li>
-                                            <li><a href="#">Stockpoint Register</a></li>
-                                            <li><a href="#">Manufacturing Unit Register</a></li>
-                                            <li><a href="#">Crusher Register</a></li>
-                                            <li><a href="#">Seized Minerals Register</a></li>
-                                            <li><a href="#">Project/ Package Register</a></li>
-                                            <li><a href="#">Quarry for Project Register</a></li>
+                                            <li><a href="eAuctionParticipate.aspx">Participate</a></li>
+                                            <li><a href="eAuctionPlotProfile.aspx">Plot Profile</a></li>
+                                            
                                         </ul>
                                     </div>
                                 </li>
@@ -142,6 +138,7 @@
         </div>
     </form>
     <script src="js/jquery-2.1.1.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js" integrity="sha512-2hIlk2fL+NNHkULe9gGdma/T5vSYk80U5tvAFSy3dGEl8XD4h2i6frQvHv5B+bm/Itmi8nJ6krAcj5FWFcBGig==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="js/Sidebar.js"></script>
