applyDigitalCertificate page added

--- a/Mahamining_e-Auction/css/StyleSheet.css
+++ b/Mahamining_e-Auction/css/StyleSheet.css
@@ -466,3 +466,21 @@ table.fold-table {
         background-color:#fff;
         border-radius:10px;
     }
+
+.form-control {
+    border: none;
+    border-bottom: 1px solid #ccc;
+    font-size: 0.85rem;
+    border-radius: 0;
+    box-shadow: none;
+}
+    .form-control:focus {
+        color: #495057;
+        background-color: #fff;
+        border-color: #80bdff;
+        outline: 0;
+        box-shadow: 0 0 0 .2rem rgba(0,123,255,.25);
+    }
+.form-group {
+    margin-bottom: 1rem;
+}
