--- a/Mahamining_e-Auction/css/StyleSheet.css
+++ b/Mahamining_e-Auction/css/StyleSheet.css
@@ -484,3 +484,50 @@ table.fold-table {
 .form-group {
     margin-bottom: 1rem;
 }
+
+.form-check-input:checked {
+    background-color: #234160;
+    border-color: #234160;
+}
+.upload-photo .btn-info {
+    font-size: 12px;
+    background: #234160;
+    border: #234160;
+    padding: 4px 15px;
+    max-width: 100%;
+    width: 120px;
+    color: #fff;
+}
+button.dept_submit {
+    font-size: 16px;
+    text-transform: uppercase;
+    font-weight: 600;
+    border: 1px solid #C4C4C4;
+    border-radius: 5px;
+}
+.dept_submit .fa-times {
+    background: #FE737C;
+    color: #fff;
+    padding: 5px 5px;
+    border-radius: 50%;
+    transform: rotateZ(270deg);
+    font-size: 11px;
+    margin: 0px 10px 0 0;
+    position: relative;
+    top: -2px;
+    width: 20px;
+    height: 20px;
+}
+.dept_submit .fa-sign-out-alt {
+    background: #24BE9E;
+    color: #fff;
+    padding: 5px 5px;
+    border-radius: 50%;
+    transform: rotateZ(270deg);
+    font-size: 11px;
+    margin: 0px 10px 0 0;
+    position: relative;
+    top: -2px;
+    width: 20px;
+    height: 20px;
+}
