--- a/Mahamining_e-Auction/AdminMaster.Master
+++ b/Mahamining_e-Auction/AdminMaster.Master
@@ -56,11 +56,18 @@
                                     </div>
                                 </li>
                                 <li class="active-new">
+                                    <a title="Main Dashboard" href="EventDetails.aspx">
+                                        <i class="fas fa-calendar"></i>
+                                        <span class="menu-text">Event Details</span>
+                                    </a>
+                                </li>
+                                <li class="active-new">
                                     <a title="Main Dashboard" href="login.aspx">
                                         <i class="fas fa-star"></i>
                                         <span class="menu-text">Login</span>
                                     </a>
                                 </li>
+                                
                             </ul>
                         </div>
                     </div>
@@ -78,11 +85,10 @@
                                     <span class="navbar-toggler-icon"></span>
                                 </button>
                                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                                    <ul class="navbar-nav ms-auto">
+                                    <ul class="navbar-nav ms-auto me-4">
                                         <li class="nav-item">
                                             <span class="navbar-text nav-link">Welcome - <span class="username">Sujay Chavan</span>
                                             </span>
-
                                         </li>
                                         <li class="nav-item dropdown">
                                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
