--- a/Mahamining_e-Auction/AdminMaster.Master
+++ b/Mahamining_e-Auction/AdminMaster.Master
@@ -51,7 +51,6 @@
                                             <li><a href="ApplyDigitalCertificate.aspx">Apply Digital Certificate</a></li>
                                             <li><a href="BidderRegistration.aspx">Bidder Registration</a></li>
                                             <li><a href="MakePayment.aspx">Make Payment</a></li>
-                                            
                                         </ul>
                                     </div>
                                 </li>
@@ -59,6 +58,12 @@
                                     <a title="Main Dashboard" href="EventDetails.aspx">
                                         <i class="fas fa-calendar"></i>
                                         <span class="menu-text">Event Details</span>
+                                    </a>
+                                </li>
+                                <li class="active-new">
+                                    <a title="Main Dashboard" href="GeneratedDemandNote.aspx">
+                                        <i class="fas fa-file"></i>
+                                        <span class="menu-text">Generated Demand Note</span>
                                     </a>
                                 </li>
                                 <li class="active-new">
